--- a/.github/workflows/Playwright Test.yml
+++ b/.github/workflows/Playwright Test.yml
@@ -1,16 +1,16 @@
 name: Playwright Tests
 
 on:
-  #push:
-  #  branches: 
-  #      - main
-  #      - master
-  #      - develop
-  #pull_request:
-  #  branches: 
-  #      - main
-  #      - master
-  #      - develop
+  push:
+   branches: 
+       - main
+       - master
+       - develop
+  pull_request:
+   branches: 
+       - main
+       - master
+       - develop
   schedule:
     - cron: "0 13 * * *" # Runs at 13:00 UTC (8 AM EST)
   workflow_dispatch:
